[tool.poetry]
name = "target-easyecom"
version = "0.0.1"
description = "`target-easyecom` is a Singer target for Easyecom, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["hotglue <hello@hotglue.io>"]
keywords = [
    "ELT",
    "Easyecom",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = "^0.9.0"
target-hotglue = "^0.0.4"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_easyecom"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_easyecom"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-easyecom = 'target_easyecom.target:TargetEasyecom.cli'
